# movie-finder

./: .gitignore  EDA.ipynb  Nrl.py  README.md  STAT 418 Dashboard v3.ipynb  STAT 418 Dashboard.ipynb  demo.ipynb  example.ipynb  movienight_app.py  pyproject.toml
cache/: cache.db  cache.db-shm  cache.db-wal
src/Nrl/: __init__.py
src/movie-finder/: cosine_similarity.py
src/movie-madlibs/: _MovieFinder.py
src/movie_finder/: _MovieFinder.py
src/movie_finder/datasets/: _tmdb.py
src/movienight/datasets/: _config.py
src/movienight/datasets/data/: tmdb.csv
