[tool.poetry]
name = "stats-418-final-project"
version = "0.1.0"
description = "Find a suggested movie through madlibs-esque prompts"
authors = [
    "Ajay Patel <agemuffin21@gmail.com>",
    "Dylan Jorling <dkjorling@gmail.com>",
    "Daniel Kwon <danielkwon02@gmail.com>",
    "Sofia Alcazar <sofiaalcazar7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
pandas = "^1.5.3"
ipywidgets = "^8.0.4"
pathlib = "^1.0.1"
numpy = "^1.24.2"
plotly = "^5.13.1"
dash = "^2.8.1"
jupyter-dash = "^0.4.2"
nltk = "^3.8.1"
vadersentiment = "^3.3.2"
torch = "^1.13.1"
torchvision = "^0.14.1"
matplotlib = "^3.7.0"
datetime = "^5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
